Fixes swagger status codes for post pad
