# backend/docs/swagger.yaml
@@ -104,12 +104,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/server.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/server.ErrResponse'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/server.ErrResponse'
+        "507":
+          description: Insufficient Storage
           schema:
             $ref: '#/definitions/server.ErrResponse'
       summary: Create a pad
